k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: voyages:local
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 5
