k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
